# verifiable-federated-unlearning

./: .gitignore  environment.yml  pyproject.toml  requirements.txt
config/: default.yaml  quickdrop.yaml  schemas.py
data/: partitioner.py
evidence/: __init__.py  bundle.py  hashing.py  participation_log.py
experiments/: __init__.py  failure_cases.py
federation/: __init__.py  aggregation.py  client.py  trainer.py  trainer_federaser.py
models/: convnet.py  resnet.py
scripts/: build_quickdrop_bundles.py  create_unlearning_request.py  diagnose_federaser_norms.py  diagnose_fedosd_selection_seeds.py  run_baseline_variance.py  run_directional_diagnostic.py  run_gold_retraining.py  run_l2_diagnostic.py  run_original_training.py  run_phase4a_evaluate.py  run_phase4a_generate.py  run_phase4b_evaluate.py  run_phase4b_federaser.py  run_phase4b_federaser_prep.py  run_phase4b_fedosd.py  run_phase4b_ibm_fu.py  run_phase4b_quickdrop.py  run_phase4b_sga.py  run_verification.py
unlearning/methods/: federaser.py  fedosd.py  ibm_fu.py  sga.py
utils/: seeding.py
verification/: __init__.py  calibration.py  comparison.py  metrics.py  probe_set.py  runner.py  verdict.py
verification/checks/: __init__.py  check_accuracy_parity.py  check_evidence.py  check_logit_divergence.py  check_trajectory.py  check_weight_distance.py
