[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiable-federated-unlearning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy",
    "pydantic>=2.0,<3.0",
    "pyyaml",
]

[tool.setuptools]
packages = [
    "config",
    "data",
    "models",
    "utils",
    "federation",
    "unlearning",
    "unlearning.methods",
    "evidence",
    "verification",
    "verification.checks",
    "experiments",
    "tests",
]
